--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@applitools/eyes-selenium": "latest",
     "mocha": "latest",
     "selenium-webdriver": "^3.6.0"
+  },
+  "engines": {
+    "node": ">=12.13.0"
   }
 }
